# hyperprocess

./: .gitignore  LICENSE  README.md  flowchart.mermaid  flowchart.mmd  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: build.yml  publish.yml  test.yml
docs/: flowchart.mermaid
hyperprocess/: decorators.py
hyperprocess/core/: queue.py
hyperprocess/core/parallel/: process_pool.py  thread_pool.py
src/hyperprocess/: __init__.py
src/hyperprocess/core/: connection.py  forking.py  managers.py  process.py
src/hyperprocess/core/parallel/: process_pool.py
tests/: __init__.py  test_decorators.py
tests/test_core/test_queue/: test_queue_integration.py  test_queue_stress.py  test_queue_unit.py
