[metadata]
name = hyperprocess
version = 0.1.0
description = A Python package for parallel processing and optimization.
long_description = file: README.md
long_description_content_type = text/markdown
author = Amir Hossein Partovi
author_email = amir@example.com
url = https://github.com/yourusername/HyperProcess
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = true

[options.extras_require]
dev =
    pytest>=6.2.0
    sphinx>=4.0.0
    pytest
    coverage
    pytest-cov
docs =
    sphinx>=4.0.0
tests =
    pytest>=6.2.0

[options.packages.find]
where = src

[coverage:run]
branch = True

[coverage:report]
show_missing = True
skip_covered = True

